--- a/A2017/tensorflow.ipynb
+++ b/A2017/tensorflow.ipynb
@@ -37,9 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf"
@@ -230,7 +228,7 @@
      "output_type": "stream",
      "text": [
       "Attempting to use uninitialized value v\n",
-      "\t [[Node: _retval_v_0_0 = _Retval[T=DT_FLOAT, index=0, _device=\"/job:localhost/replica:0/task:0/device:CPU:0\"](v)]]\n"
+      "\t [[Node: v/_0 = _Send[T=DT_FLOAT, client_terminated=false, recv_device=\"/job:localhost/replica:0/task:0/device:CPU:0\", send_device=\"/job:localhost/replica:0/task:0/device:GPU:0\", send_device_incarnation=1, tensor_name=\"edge_4_v\", _device=\"/job:localhost/replica:0/task:0/device:GPU:0\"](v)]]\n"
      ]
     }
    ],
@@ -350,8 +348,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "InvalidArgumentError (see above for traceback): You must feed a value for placeholder tensor 'p' with dtype float\n",
-      "\t [[Node: p = Placeholder[dtype=DT_FLOAT, shape=[], _device=\"/job:localhost/replica:0/task:0/device:CPU:0\"]()]]\n",
+      "\t [[Node: p = Placeholder[dtype=DT_FLOAT, shape=[], _device=\"/job:localhost/replica:0/task:0/device:GPU:0\"]()]]\n",
+      "\t [[Node: p/_1 = _Recv[client_terminated=false, recv_device=\"/job:localhost/replica:0/task:0/device:CPU:0\", send_device=\"/job:localhost/replica:0/task:0/device:GPU:0\", send_device_incarnation=1, tensor_name=\"edge_4_p\", tensor_type=DT_FLOAT, _device=\"/job:localhost/replica:0/task:0/device:CPU:0\"]()]]\n",
       "\n"
      ]
     }
@@ -406,9 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tf.set_random_seed(1234)"
@@ -424,9 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "r = tf.random_uniform(\n",
@@ -624,9 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "x = tf.placeholder(dtype=tf.float32, shape=[], name='p')\n",
@@ -643,9 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dy_dx, = tf.gradients(ys=y, xs=[x])"
@@ -701,44 +691,60 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x = 0.72, y = -1.62, z = 7.10\n",
+      "x = 1.23, y = -2.17, z = 2.55\n",
+      "x = 1.54, y = -2.50, z = 0.92\n",
+      "x = 1.72, y = -2.70, z = 0.33\n",
+      "x = 1.83, y = -2.82, z = 0.12\n",
+      "x = 1.90, y = -2.89, z = 0.04\n",
+      "x = 1.94, y = -2.94, z = 0.02\n",
+      "x = 1.96, y = -2.96, z = 0.01\n",
+      "x = 1.98, y = -2.98, z = 0.00\n",
+      "x = 1.99, y = -2.99, z = 0.00\n"
+     ]
+    }
+   ],
    "source": [
     "# Avoid polluting the default graph by using an alternate graph\n",
     "with tf.Graph().as_default():\n",
     "    tf.set_random_seed(1234)\n",
     "\n",
     "    # Create two scalar variables, x and y, initialized at random.\n",
-    "    # x = WRITEME.\n",
-    "    # y = WRITEME.\n",
+    "    x = tf.get_variable(name='x', shape=[], dtype=tf.float32,\n",
+    "                        initializer=tf.random_normal_initializer())\n",
+    "    y = tf.get_variable(name='y', shape=[], dtype=tf.float32,\n",
+    "                        initializer=tf.random_normal_initializer())\n",
     "\n",
     "    # Create a tensor z whose value represents the expression\n",
     "    #     2(x - 2)^2 + 2(y + 3)^2\n",
-    "    # z = WRITEME.\n",
+    "    z = 2 * (x - 2) ** 2 + 2 * (y + 3) ** 2\n",
     "    \n",
     "    # Compute the gradients of z with respect to x and y.\n",
-    "    # dx, dy = WRITEME.\n",
+    "    dx, dy = tf.gradients(z, [x, y])\n",
     "    \n",
     "    # Create an assignment expression for x using the update rule\n",
     "    #    x <- x - 0.1 * dz/dx\n",
     "    # and do the same for y.\n",
-    "    # x_update = WRITEME.\n",
-    "    # y_update = WRITEME.\n",
+    "    x_update = tf.assign_sub(x, 0.1 * dx)\n",
+    "    y_update = tf.assign_sub(y, 0.1 * dy)\n",
     "    \n",
     "    with tf.Session() as session:\n",
     "        # Run the global initializer op for x and y.\n",
-    "        # WRITEME.\n",
+    "        session.run(tf.global_variables_initializer())\n",
     "        \n",
     "        for _ in range(10):\n",
-    "            pass\n",
     "            # Run the update ops for x and y.\n",
-    "            # WRITEME.\n",
+    "            session.run([x_update, y_update])\n",
     "            \n",
     "            # Retrieve the values for x, y, and z, and print them.\n",
-    "            # x_val, y_val, z_val = WRITEME.\n",
-    "            # print('x = {:4.2f}, y = {:4.2f}, z = {:4.2f}'.format(x_val, y_val, z_val))"
+    "            x_val, y_val, z_val = session.run([x, y, z])\n",
+    "            print('x = {:4.2f}, y = {:4.2f}, z = {:4.2f}'.format(x_val, y_val, z_val))"
    ]
   },
   {
@@ -768,10 +774,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "tf.set_random_seed(1234)\n",
@@ -794,10 +798,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [],
    "source": [
     "optimizer = tf.train.GradientDescentOptimizer(learning_rate=0.1)"
@@ -812,10 +814,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [],
    "source": [
     "update_op = optimizer.minimize(loss=z, var_list=tf.trainable_variables())"
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
